style: fixed some mobile layout bugs

--- a/src/styles/carousel.css
+++ b/src/styles/carousel.css
@@ -58,7 +58,7 @@
   
   .carousel {
     position: relative;
-    padding-top: 75%;
+    padding-top: 50%;
     filter: drop-shadow(0 0 10px #0003);
     perspective: 100px;
   }
@@ -126,6 +126,7 @@
     width: 100%;
     height: 100%;
     scroll-snap-align: center;
+    cursor: pointer;
   }
   
   @media (hover: hover) {
