--- a/src/styles/portfolio.css
+++ b/src/styles/portfolio.css
@@ -6,8 +6,7 @@ Portfolio
     padding: 5em 0px;
   }
   .project__title{
-    width: 50%;
-    padding: 0 0 0 1em;
+    padding: 1em 0 0 1em;
     font-size: 1.45em;
     text-align: left; 
   }
@@ -22,7 +21,7 @@ Portfolio
   }
   .project__content--img {
     flex: 50% 0 0;
-    margin: 1em 0;
+    /* margin: 1em 0; */
     padding: 0 1em;
   }
   
@@ -73,7 +72,7 @@ Portfolio
   }
   .project__content--text-right{
     width: 100%;
-    padding: 1.25em;
+    padding: 0 1.25em;
   }
 }
 
